# Orzatty-Protocol

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md
examples/: echo_client.rs
orzatty-client/: Cargo.toml
orzatty-client/src/: easy.rs  lib.rs
orzatty-core/: Cargo.toml
orzatty-core/fuzz/: Cargo.toml
orzatty-core/fuzz/fuzz_targets/: frame_decode.rs
orzatty-core/src/: auth.rs  error.rs  frame.rs  framer.rs  lib.rs  protocol.rs
orzatty-wasm/: Cargo.toml  index.html
orzatty-wasm/pkg/: orzatty_wasm.d.ts  orzatty_wasm.js  orzatty_wasm_bg.wasm  orzatty_wasm_bg.wasm.d.ts
orzatty-wasm/src/: lib.rs
reference-server/: Cargo.toml
reference-server/src/: main.rs
